--- a/snanegame.html
+++ b/snanegame.html
@@ -50,7 +50,7 @@ Inspiration by whatsdev, thank you!
     />
 
     <div class="footercarrier">
-      <a href="index.html" class="footer">Back to Emma Ilona King</a>
+      <a href="emmaking.dev" class="footer">EmmaKingDev</a>
     </div>
 
     <script src="app.js" charset="utf-8"></script>
